# teo

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  Makefile  README.md  assert.cpp  banner  codelistHandler.cpp  codelistHandler.h  end.cpp  for.cpp  goto.cpp  gui.cpp  guihelper.cpp  guihelper.h  index.html  index.md  interpret.cpp  interpret.h  let.cpp  listelement.cpp  listelement.h  main  main.cpp  mkdocs.yml  parse_file.cpp  parse_file.h  print.cpp
.github/workflows/: c-cpp-win.yml  c-cpp.yml  codeql.yml  docs.yml
api/: package-lock.json  res.js
commands/: assert.cpp  end.cpp  goto.cpp  let.cpp  print.cpp
commands/assert/: index.html
commands/end/: index.html
commands/goto/: index.html
commands/let/: index.html
commands/print/: index.html
docs/: index.md  requirements.txt
docs/commands/: assert.md  end.md  goto.md  let.md  print.md
search/: search_index.json
test/: circle.teo  loop.teo  test.teo
